force-app/main/default/objects/BatchJobSettings__c/BatchJobSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Phase 2 - Custom settings for scheduling batch jobs
ECLM -  Custom settings for renewal and review opportunity creation jobs</description>
    <label>BatchJobSettings</label>
</CustomObject>