force-app/main/default/objects/BatchJobSettings__c/fields/OFTR_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>OFTR_Batch_Size__c</fullName>
    <defaultValue>50</defaultValue>
    <description>ECLM - Used by Apex Batch Scheduler “OpportunityFixedTermRenewal_Schedulable” - The optional batch size for execution.</description>
    <inlineHelpText>ECLM - Used by Apex Batch Scheduler “OpportunityFixedTermRenewal_Schedulable” - The optional batch size for execution.</inlineHelpText>
    <label>OFTR - Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>