force-app/main/default/objects/BatchJobSettings__c/fields/OFTR_Month__c.field-meta.xml
<CustomField>
    <fullName>OFTR_Month__c</fullName>
    <defaultValue>&quot;*&quot;</defaultValue>
    <description>ECLM - Used by Apex Batch &quot;OpportunityFixedTermRenewal_Schedule&quot; - The month value for the schedule.</description>
    <inlineHelpText>ECLM - Used by Apex Batch &quot;OpportunityFixedTermRenewal_Schedule&quot; - The month value for the schedule.</inlineHelpText>
    <label>OFTR - Month</label>
    <length>10</length>
    <type>Text</type>
</CustomField>