force-app/main/default/objects/BatchJobSettings__c/fields/OOER_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>OOER_Batch_Size__c</fullName>
    <defaultValue>50</defaultValue>
    <description>ECLM - Used by Apex Batch Scheduler “OpportunityOpenEndedReview_Schedulable” - The optional batch size for execution.</description>
    <inlineHelpText>ECLM - Used by Apex Batch Scheduler “OpportunityOpenEndedReview_Schedulable” - The optional batch size for execution.</inlineHelpText>
    <label>OOER - Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>