force-app/main/default/objects/BatchJobSettings__c/fields/OOER_Days_Before_End_Date__c.field-meta.xml
<CustomField>
    <fullName>OOER_Days_Before_End_Date__c</fullName>
    <defaultValue>90</defaultValue>
    <description>ECLM - Used by Apex Batch &quot;OpportunityOpenEndedReview_Batchable&quot; - The number of days before the Contract End Date that a Fixed Term Opportunity should be cloned as a “Review”.</description>
    <inlineHelpText>ECLM - Used by Apex Batch &quot;OpportunityOpenEndedReview_Batchable&quot; - The number of days before the Contract End Date that a Fixed Term Opportunity should be cloned as a “Review”.</inlineHelpText>
    <label>OOER - Days Before End Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>