force-app/main/default/objects/BatchJobSettings__c/fields/OOER_Error_Email__c.field-meta.xml
<CustomField>
    <fullName>OOER_Error_Email__c</fullName>
    <description>ECLM - Used by Apex Batch &quot;OpportunityOpenEndedReview_Batchable&quot; - The email address to send error notifications to in the event of failure</description>
    <inlineHelpText>ECLM - Used by Apex Batch &quot;OpportunityOpenEndedReview_Batchable&quot; - The email address to send error notifications to in the event of failure</inlineHelpText>
    <label>OOER - Error Email</label>
    <type>Email</type>
</CustomField>