force-app/main/default/objects/BatchJobSettings__c/fields/OOER_Minutes__c.field-meta.xml
<CustomField>
    <fullName>OOER_Minutes__c</fullName>
    <defaultValue>&quot;0&quot;</defaultValue>
    <description>ECLM - Used by Apex Batch &quot;OpportunityOpenEndedReview_Schedule&quot; - The minutes value for the schedule.</description>
    <inlineHelpText>ECLM - Used by Apex Batch &quot;OpportunityOpenEndedReview_Schedule&quot; - The minutes value for the schedule.</inlineHelpText>
    <label>OOER - Minutes</label>
    <length>10</length>
    <type>Text</type>
</CustomField>