force-app/main/default/objects/BatchJobSettings__c/fields/OPC_Last_Modified_Date_Condition__c.field-meta.xml
<CustomField>
    <fullName>OPC_Last_Modified_Date_Condition__c</fullName>
    <description>The field is used in the WHERE Clause of the SOQL in OPCRevenuesRollUpBatchable Job</description>
    <label>OPC Last Modified Date Condition</label>
    <length>150</length>
    <type>Text</type>
</CustomField>