force-app/main/default/objects/BatchJobSettings__c/fields/OrgRevCalcWindow__c.field-meta.xml
<CustomField>
    <fullName>OrgRevCalcWindow__c</fullName>
    <description>This parameter contains the number of days the batch process will look &apos;back&apos; when calculating the revenue by organization. For example, if this is set to 7, the batch process will look for records modified in the last 7 days in the Target and Revenue object when determining which accounts should have their summary fields calculated.</description>
    <label>OrgRevCalcWindow</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>