force-app/main/default/objects/BatchJobSettings__c/fields/OrgRevCalcWindowOffset__c.field-meta.xml
<CustomField>
    <fullName>OrgRevCalcWindowOffset__c</fullName>
    <description>Holds the number of days from today (calculating backwards) for the Organisation Revenue Calculation window (specified by OrgRevCalcWindow) should start. For example, if the OrgRevCalcWindowOffset is set to 7 and OrgRevCalcWindow is set to 10, then the window will be from (today-7) to (today-17).

This should be set to zero for normal weekly batch runs.</description>
    <label>OrgRevCalcWindowOffset</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>