force-app/main/default/objects/BatchJobSettings__c/fields/SCR_Day_Of_Week__c.field-meta.xml
<CustomField>
    <fullName>SCR_Day_Of_Week__c</fullName>
    <description>Phase 2 - Utilised in the Sales Coverage Change Request batch process</description>
    <label>SCR Day Of Week</label>
    <length>30</length>
    <type>Text</type>
</CustomField>