force-app/main/default/objects/BatchJobSettings__c/fields/SCR_Hours__c.field-meta.xml
<CustomField>
    <fullName>SCR_Hours__c</fullName>
    <description>Phase 2 - Utilised in the Sales Coverage Change Request batch process</description>
    <label>SCR Hours</label>
    <length>30</length>
    <type>Text</type>
</CustomField>