force-app/main/default/objects/BatchJobSettings__c/fields/SCR_Minutes__c.field-meta.xml
<CustomField>
    <fullName>SCR_Minutes__c</fullName>
    <description>Phase 2 - Utilised in the Sales Coverage Change Request batch process</description>
    <label>SCR Minutes</label>
    <length>30</length>
    <type>Text</type>
</CustomField>