force-app/main/default/objects/BatchJobSettings__c/fields/SCR_Optional_Year__c.field-meta.xml
<CustomField>
    <fullName>SCR_Optional_Year__c</fullName>
    <description>Phase 2 - Utilised in the Sales Coverage Change Request batch process</description>
    <label>SCR Optional Year</label>
    <length>30</length>
    <type>Text</type>
</CustomField>