force-app/main/default/objects/BatchJobSettings__c/fields/With_LFY__c.field-meta.xml
<CustomField>
    <fullName>With_LFY__c</fullName>
    <label>With LFY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>